// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphvizWasmAdapter: > computedAmazonView 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 104,
        "x": 443,
        "y": 137,
      },
      "parent": null,
      "points": [
        [
          382,
          164,
        ],
        [
          454,
          164,
        ],
        [
          538,
          164,
        ],
        [
          611,
          164,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon.s3",
    },
  ],
  "height": 302,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 286,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labelBBox": {
        "height": 19,
        "width": 56,
        "x": 6,
        "y": -2,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 400,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labelBBox": {
        "height": 25,
        "width": 80,
        "x": 121,
        "y": 71,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        47,
        74,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 321,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "height": 286,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 19,
        "width": 68,
        "x": 6,
        "y": -2,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        583,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 400,
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "height": 180,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 48,
        "width": 144,
        "x": 89,
        "y": 61,
      },
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        622,
        74,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "S3",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 991,
}
`;

exports[`GraphvizWasmAdapter: > computedCloud3levels 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 60,
        "x": 228,
        "y": 232,
      },
      "parent": null,
      "points": [
        [
          228,
          180,
        ],
        [
          228,
          223,
        ],
        [
          228,
          274,
        ],
        [
          228,
          318,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 109,
        "x": 708,
        "y": 232,
      },
      "parent": null,
      "points": [
        [
          708,
          180,
        ],
        [
          708,
          223,
        ],
        [
          708,
          274,
        ],
        [
          708,
          318,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBBox": {
        "height": 36,
        "width": 237,
        "x": 238,
        "y": 563,
      },
      "parent": "cloud",
      "points": [
        [
          234,
          510,
        ],
        [
          236,
          558,
        ],
        [
          240,
          617,
        ],
        [
          243,
          667,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 18,
        "width": 79,
        "x": 559,
        "y": 571,
      },
      "parent": "cloud",
      "points": [
        [
          623,
          510,
        ],
        [
          590,
          542,
        ],
        [
          552,
          577,
        ],
        [
          514,
          605,
        ],
        [
          484,
          629,
        ],
        [
          450,
          652,
        ],
        [
          417,
          673,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "points": [
        [
          408,
          769,
        ],
        [
          496,
          769,
        ],
        [
          605,
          769,
        ],
        [
          695,
          769,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 104,
        "x": 1103,
        "y": 742,
      },
      "parent": null,
      "points": [
        [
          1043,
          769,
        ],
        [
          1115,
          769,
        ],
        [
          1199,
          769,
        ],
        [
          1271,
          769,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "height": 947,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 67,
        "width": 237,
        "x": 42,
        "y": 51,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        67,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 25,
        "width": 85,
        "x": 118,
        "y": 71,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        547,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 321,
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "height": 675,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 19,
        "width": 56,
        "x": 6,
        "y": -2,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        264,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 1100,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "height": 180,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 67,
        "width": 255,
        "x": 33,
        "y": 51,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        67,
        330,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "height": 180,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 67,
        "width": 273,
        "x": 33,
        "y": 51,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        538,
        330,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 339,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 286,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 19,
        "width": 77,
        "x": 6,
        "y": -2,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        48,
        613,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 1020,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "height": 180,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 67,
        "width": 252,
        "x": 35,
        "y": 51,
      },
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        87,
        679,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Graphql API",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "height": 180,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 67,
        "width": 260,
        "x": 31,
        "y": 51,
      },
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        707,
        679,
      ],
      "shape": "storage",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 47,
        "width": 171,
        "x": 75,
        "y": 61,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        1282,
        679,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1603,
}
`;

exports[`GraphvizWasmAdapter: > computedCloudView 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 109,
        "x": 278,
        "y": 232,
      },
      "parent": null,
      "points": [
        [
          224,
          180,
        ],
        [
          255,
          223,
        ],
        [
          292,
          275,
        ],
        [
          324,
          320,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 60,
        "x": 527,
        "y": 232,
      },
      "parent": null,
      "points": [
        [
          567,
          180,
        ],
        [
          536,
          223,
        ],
        [
          499,
          275,
        ],
        [
          467,
          320,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 18,
        "width": 23,
        "x": 693,
        "y": 392,
      },
      "parent": "cloud",
      "points": [
        [
          555,
          420,
        ],
        [
          643,
          420,
        ],
        [
          753,
          420,
        ],
        [
          843,
          420,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 104,
        "x": 1250,
        "y": 393,
      },
      "parent": null,
      "points": [
        [
          1189,
          420,
        ],
        [
          1261,
          420,
        ],
        [
          1345,
          420,
        ],
        [
          1418,
          420,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "height": 558,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 25,
        "width": 85,
        "x": 117,
        "y": 71,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 67,
        "width": 237,
        "x": 41,
        "y": 51,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        470,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 321,
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 286,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 19,
        "width": 56,
        "x": 6,
        "y": -2,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        196,
        264,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 1019,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 25,
        "width": 83,
        "x": 118,
        "y": 71,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        235,
        330,
      ],
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Frontend",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 25,
        "width": 80,
        "x": 121,
        "y": 71,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        854,
        330,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 47,
        "width": 171,
        "x": 75,
        "y": 61,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        1429,
        330,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1750,
}
`;

exports[`GraphvizWasmAdapter: > computedIndexView 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 109,
        "x": 286,
        "y": 232,
      },
      "parent": null,
      "points": [
        [
          228,
          180,
        ],
        [
          257,
          218,
        ],
        [
          291,
          262,
        ],
        [
          320,
          301,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 60,
        "x": 520,
        "y": 232,
      },
      "parent": null,
      "points": [
        [
          563,
          180,
        ],
        [
          534,
          218,
        ],
        [
          500,
          262,
        ],
        [
          471,
          301,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 104,
        "x": 630,
        "y": 374,
      },
      "parent": null,
      "points": [
        [
          569,
          401,
        ],
        [
          641,
          401,
        ],
        [
          725,
          401,
        ],
        [
          798,
          401,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "height": 491,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 25,
        "width": 85,
        "x": 117,
        "y": 71,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 67,
        "width": 237,
        "x": 41,
        "y": 51,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        470,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 25,
        "width": 50,
        "x": 135,
        "y": 71,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        235,
        311,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 47,
        "width": 171,
        "x": 74,
        "y": 61,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        810,
        311,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "width": 1130,
}
`;
